Finished groups